Propuestas de Temas

--- a/propuestas.html
+++ b/propuestas.html
@@ -1,12 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
+!DOCTYPE html>
+<html lang=“en”>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset =“UTF-8”>
+<title></title>
 </head>
 <body>
-    
+    <!--Tema de Andres Rivas-->
+    <hgroup>
+        <h1>tema principal: Ajedrez</h1>
+        <h3>subtema 1: Aperturas</h3>
+        <h3>subtema 2: END GAMES</h3>
+        <h3>subtema 3 Reglas</h3>
+    </hgroup>
+<!--Fin Tema-->
+<!--Tema de Andres Rivas-->
+<hgroup>
+    <h1>tema principal:Tortilla Española</h1>
+    <h3>subtema 1:Receta</h3>
+    <h3>subtema 2:Historia</h3>
+    <h3>subtema 3:Datos</h3>
+</hgroup>
+<!--Fin Tema-->
+<!--Tema de Andres Rivas-->
+<hgroup>
+    <h1>tema principal:Soccer</h1>
+    <h3>subtema 1:Reglas</h3>
+    <h3>subtema 2:Historia</h3>
+    <h3>subtema 3:Tecnica</h3>
+</hgroup>
+<!--Fin Tema-->
+<!--Tema de Andres Rivas-->
+<hgroup>
+    <h1>tema principal:Marvel</h1>
+    <h3>subtema 1:Historia</h3>
+    <h3>subtema 2:Personajes</h3>
+    <h3>subtema 3:Cinematic Universe</h3>
+</hgroup>
+<!--Fin Tema-->
+<p>.</p>
+<br>,<br>
 </body>
 </html>
