cambios hechos en clase

--- a/TEMA 1.html
+++ b/TEMA 1.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <!--inicia Entrada: -->
+<section>
+    <main>
 <article>
     <header>
         <hgroup>
@@ -30,5 +32,13 @@
     </footer>
 </article>
 <!--Fin entrada:Nombre del articulo-->
+</main>
+<aside>
+
+</aside>
+<footer>
+    
+</footer>
+</section>
 </body>
 </html>
