--- a/tema1.html
+++ b/tema1.html
@@ -1,9 +1,16 @@
-<!-- Andres Rivas Martinez -->
+<!-- Nombre completo persona responsable Andrés Rivas Mtz-->
 <!DOCTYPE html>
-<html lang=“en”>
+<html lang="es">
+
 <head>
-<meta charset =“UTF-8”>
-<title>Tema 1</title>
+    <!-- añade el conjunto de caracteres latinos -->
+    <meta charset="UTF-8">
+    <title>Aprende Ajedrez</title>
+</head>
+
+<body>
+    <!-- inicia barra de navegación -->
+    <link rel="stylesheet" href="assets/styles/estilos_de_andres.css">
 </head>
 <body>
 <!--inicia Entrada:Empieza mi blog -->
@@ -11,9 +18,9 @@
     <ul>
         <li><a class=“resaltado“ href=“index.html“ 
         target=“blank“>Principal</a></li>
-        <li><a href=“TEMA 2.html“>Tema 2</a> </li>
-        <li><a href=“TEMA 3.html“>Tema 3</a> </li>
-        <li><a href=“TEMA 4.html“>Tema 4</a> </li>
+        <li><a href=“tema2.html“>Tema 2</a> </li>
+        <li><a href="tema3.html">Tema 3</a> </li>
+        <li><a href=“tema4.html“>Tema 4</a> </li>
     </ul>
 </nav>
 <section>
@@ -39,11 +46,18 @@
          siempre hay que recordar que la vida es corta y hay que disfrutar, todo moderado
 
          Piensa antes de actuar, evitara futuros problemas como
-         <Meter>1.- Perder amistades </Meter>
-         <meter>2.-Oportunidades perdidas</meter>
-         <meter>3.-Partidas perdidas</meter>
+         <div>
+             <ol>
+            <li>Perder amistades</li>
+            <li>Oportunidades Perdidas</li>
+            <li>Partidas Perdidas</li>
+             </ol>
+         </div>
+        <div>
             El Ajedrez y la vida tienen principio y fin, Disfruta
-        PD: LO HICE EN GOOGLE ACADEMICO PTO EXTRA:)</p>
+        PD: LO HICE EN GOOGLE ACADEMICO PTO EXTRA:)
+        </div>
+    </p>
 
     
     
@@ -67,6 +81,13 @@
 
     </footer>
 </article>
+
+<!--2do article lista top 10-->
+
+<!--3ro article lista 5 sitios oficiales-->
+
+<!--4to video youtube-->
+
 <!--Fin entrada:Nombre del articulo-->
 </main>
 <aside>
@@ -95,3 +116,6 @@
 </section>
 </body>
 </html>
+
+
+
