--- a/tema3.html
+++ b/tema3.html
@@ -1,30 +1,39 @@
 <!-- Andres Rivas Martinez -->
+<!-- Nombre completo persona responsable Andrés Rivas Mtz-->
 <!DOCTYPE html>
-<html lang=“en”>
+<html lang="es">
+
 <head>
-<meta charset =“UTF-8”>
-<title>Tema 3</title>
+    <!-- añade el conjunto de caracteres latinos -->
+    <meta charset="UTF-8">
+    <title>Mi Tema</title>
+</head>
+
+<body>
+    <!-- inicia barra de navegación -->
+
+<link rel="stylesheet" href="assets/styles/estilos_de_andres.css">
 </head>
 <body>
 <!--inicia Entrada:Empieza mi blog -->
 <nav>
     <ul>
         <li><a class=“resaltado“ href=“index.html“ 
-        target=“blank“>Principal</a></li>
-        <li><a href=“TEMA 2.html“>Tema 2</a> </li>
-        <li><a href=“TEMA 1.html“>Tema 1</a> </li>
-        <li><a href=“TEMA 4.html“>Tema 4</a> </li>
+            target=“blank“>Principal</a></li>
+            <li><a href=“tema2.html“>Tema 2</a> </li>
+            <li><a href="tema1.html">Tema 1</a> </li>
+            <li><a href=“tema4.html“>Tema 4</a> </li>
     </ul>
 </nav>
 <section>
-    <main>
+       <main>
 <article>
     <header id=soccer>
         <hgroup>
             <!--Titulo del articulo:-->
             <h2>Tiulo:Soccer</h2>
-            <h2><img src=“https://es.123rf.com/photo_35550933_bal%C3%B3n-de-f%C3%BAtbol-y-estadio.html“
-            alt=“balonsoccer“ height=“30px“ width=“auto“>FUCHOBOL</h2>
+            <h2><img src="assets/images/soccer-ball.png"
+            alt=“balonsoccer“ height="30px" width=“auto“>FUCHOBOL</h2>
             <!--Fecha en la que se escribio el articulo-->
             <h4>15/11/21</h4>
         </hgroup>
@@ -53,7 +62,7 @@
     </div>
     <!-- inicia ilustración del artículo -->
     <figure>
-        <img src=“https://es.123rf.com/photo_35550933_bal%C3%B3n-de-f%C3%BAtbol-y-estadio.html“" alt="ilustracion 1º artículo" height="600px" width="auto">
+        <h2><img src="assets/images/football.png" alt="ilustracion 1º artículo" height="600px" width="auto">
         <figcaption>GOL.</figcaption>
     </figure>
     <!-- termina ilustración del artículo -->
@@ -70,6 +79,7 @@
 
 </aside>
 <footer>
+    <h2><img src="assets/images/strategy.png">
     <inframe>  src=https://www.youtube.com/watch?v=GqHSWptUONI</inframe>
     <h2>Video explicando uno de los puntos basicos del soccer, en este caso son la tecnica de tiro y su importancia, escogi a este youtuber porque explica de una manera muy sencilla, entretenida y con ejemplos </h2>
     <!-- Datos del autor -->
