cambie el color de el tema 1 para que se vean bin las imgs

--- a/tema1.html
+++ b/tema1.html
@@ -15,7 +15,7 @@
 <body>
     <!-- inicia barra de navegación -->
 
-<link rel="stylesheet" href="assets/styles/estilos_de_andres.css">
+<link rel="stylesheet" href="assets/styles/estilo1.css">
 </head>
 
     <body>
@@ -303,7 +303,7 @@
                         <!-- Título del artículo -->
                         <h2><img src="assets/images/strategy (2).png" alt="ilustracion 1º artículo" height="80px" width="auto">YT video</h2>
             <iframe>https://www.youtube.com/watch?v=Gi_gX4PGqIg</iframe>
-            <h2>Video de el trailer de la pelicula mas taquillera de Marvel Cinematic Studios: Avengers End Game</h2>
+            <h2>Video de torneo chess championship</h2>
             
             <img src="assets/images/strategy (1).png" alt="ilustracion artículo" height="80px" width="auto">
             <div>
