Lo que me faltaba

--- a/tema2.html
+++ b/tema2.html
@@ -36,10 +36,11 @@
                         <p>Futbol en la actualidad
                             El fútbol es uno de los deportes más populares del mundo. 
                             Es practicado en prácticamente todos los países del mundo, los cuales se dan cita cada cuatro años para disputarse la copa mundial, y mantienen a lo largo del año sus distintas ligas regulares.
-                            
+                           <strong> <q>Sin la ayuda de mis compañeros no sería nada de nada. ...</q></strong>
                             Se estima que el fútbol tiene alrededor de 250 millones de jugadores en todo el mundo, y que moviliza alrededor de 1.800 millones de interesados y fanáticos en el globo entero.
                             Es uno de los deportes olímpicos, y su jefatura internacional la ejerce la Federación Internacional de Asociaciones de Fútbol (o FIFA, por sus siglas en francés).
-
+                            <strong><q> “A mi equipo le doy un nueve; a mí, un diez". </q></strong>
+                        
 
                             </p>
                         <figure class="ilustracion">
@@ -65,6 +66,11 @@
                         <blockquote>
                             <p>Editorial,Etecé,<i> Historia de el futbol
                                 </i>; Editorial,Etecé</p>
+                                <cite>Leo Messi</cite>
+
+
+
+                                <cite>CR7</cite>
                         </blockquote>
                         <!--Fin Bibliografia-->
                         </footer>
@@ -89,6 +95,9 @@
                             <li>Salah</li>
                         </ol>
                         <p>Como pienso que los jugadores destacaron en el 2021, y por sus rendimientos y logros los pongo en este orden.</p>
+                    <label>Goles de Messi en comparacion con CR7 (Datos fifa)</label>
+                    <meter value="600"min="0"max="804"></meter>
+                    <meter value="804"min="0"max="804"></meter>
                     </div>
                     <!--termina contenido-->
                     <footer">
@@ -206,7 +215,7 @@
                         <p>Existe en la mente de muchos entrenadores la presunción de que cualquier ejercicio de entrenamiento independientemente de su nivel de especialización (que reproduzca de forma más o menos aproximada la naturaleza-lógica del
                             juego del fútbol) transfiere siempre algo de positivo a la capacidad objetiva del jugador o del equipo. Además, es preciso tener presente que está transferencia, esto es, la influencia de un ejercicio sobre otro que se realiza en un ambiente contextualmente diferente en la adquisición de otro tipo de competencia, no representa un fenómeno positivo por naturaleza: podrá tener un efecto positivo al potenciar esa relación (es el objetivo que hay que alcanzar siempre), un
                             efecto neutro, no existe influencia ni positiva ni negativa, o un efecto negativo al influir negativamente (situación a
-                            evitar). Thorndike en 1914 postuló que para que exista una transferencia positiva es necesario tener «elementos idénticos» entre la tarea originalmente aprendida y la nueva que hay que aprender. Más tarde, Osgood (1947) desarrolló un
+                            evitar).<strong><q>Agradecido a mi Señor Dios, por esta vida que me diste, familia, amigos y mi primera profesión. Después de casi tres décadas dedicadas al fútbol, me despido de mi mayor sueño, uno realizado. Hice lo que más amé profesionalmente por 20 años y 10 en la formación de base.</q></p></strong> Thorndike en 1914 postuló que para que exista una transferencia positiva es necesario tener «elementos idénticos» entre la tarea originalmente aprendida y la nueva que hay que aprender. Más tarde, Osgood (1947) desarrolló un
                             encuadre del tipo estímulo-respuesta en el que precisó, refiriéndose a esta teoría, que la cantidad y la dirección del
                             efecto de la transferencia están relacionadas con las similitudes existentes entre los estímulos y las semejanzas de las
                             respuestas. Esta teoría, vulgarmente conocida como «teoría de los dos factores», refiere que cuando las similitudes
@@ -236,7 +245,10 @@
                                 FÚTBOL
                                 Guía práctica
                                 de ejercicios
-                                de entrenamiento </i>                                FÚTBOL
+                                de entrenamiento </i>  
+                                                          FÚTBOL
+
+                                                          <cite>Ronaldhino</cite>
                             </p>
                         </blockquote>
                         <!--Fin Bibliografia-->
