--- a/tema2.html
+++ b/tema2.html
@@ -361,6 +361,7 @@
                         <p>Lionel Andrés Messi Cuccittini (Rosario, Santa Fe; 24 de junio de 1987) es un futbolista argentino que juega como delantero o centrocampista en el Paris Saint-Germain de la Ligue 1 de Francia
                             Jugador de alto rendimiento 
                             uno de mis favoritos
+                            94/100 de valoración segun la fifa
                         </p>
                 
                         <!-- inicia ilustración del artículo -->
