--- a/tema2.html
+++ b/tema2.html
@@ -283,7 +283,7 @@
                         <li>Ligue 2</li>
                         <figure class="ilustracion">
                             <img src="assets/images/soccer-goal.png" alt="Porteria" height="600px" width="auto">
-                            <figcaption>Porteria.</figcaption>
+                            <figcaption>Porteria</figcaption>
                         </figure>
                         <h3>inicio</h3>
                         <p>Su creación es atribuida a Inglaterra, país que reglamentó el juego en 1863 a través de la Football Association (FA), la primera asociación del fútbol. Pero mientras nadie duda que el fútbol moderno nació en tierras británicas, no hay tantas certezas con respecto a qué civilización fue la primera en jugar al balompié.</p>
