--- a/tema2.html
+++ b/tema2.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a class="resaltado" href="index.html" target="_blank">Principal</a></li>
                 <li><a href="tema1.html">Ajedrez</a></li>
-                <li><a href="tema3.html">.</a></li>
+                <li><a href="tema3.html">.....ESPAÑA.....</a></li>
                 <li><a href="tema4.html">Marvel</a></li>
             </ul>
         </nav>
@@ -445,6 +445,7 @@
                     </span>
                 </div>
             </aside>
+            
             <footer id="footer_blog">
                 <div><span>Andres Rivas</span></div>
                 <div><span>Blog creado por<i> Colegio Alamos. </i></span><span>Las opiniones contenidas en este
